<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ScrollingActivity"
    tools:showIn="@layout/activity_scrolling"
    android:background="@drawable/hal_viewl_backgroudcolor">

    <android.support.constraint.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:animateLayoutChanges="true">

        <android.support.v7.widget.CardView
            android:id="@+id/floorCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"

            app:cardBackgroundColor="@color/colorSecondary"

            android:foreground="?android:attr/selectableItemBackground"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"

            android:layout_marginTop="20dp"

            app:cardCornerRadius="@dimen/cardView_radius"
            app:cardElevation="@dimen/cardview_elevation"
            app:layout_constraintBottom_toTopOf="@+id/buildingNumber_cardview"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="spread_inside">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >

                <TextView
                    android:id="@+id/floorHeader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/floornumber_layerlist"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/floor_number"
                    android:textColor="@color/colorAccent"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    />

                <TextView
                    android:id="@+id/floorData"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/floorHeader"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="20dp"
                    android:layout_marginStart="40dp"
                    android:gravity="center"
                    android:text="@string/floor_number"
                    android:textColor="@color/colorAccent"
                    android:textSize="16sp"
                    />


            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/buildingNumber_cardview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:cardBackgroundColor="@color/colorSecondary"
            android:foreground="?android:attr/selectableItemBackground"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="20dp"
            app:cardCornerRadius="@dimen/cardView_radius"
            app:cardElevation="@dimen/cardview_elevation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/floorCardView">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/buildingNumber_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/building_layerlist"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/building_number"
                    android:textColor="@color/colorAccent"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    />

                <TextView
                    android:id="@+id/buildingNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/buildingNumber_header"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="20dp"
                    android:layout_marginStart="40dp"
                    android:gravity="center"
                    android:text="@string/building_number"
                    android:textColor="@color/colorAccent"
                    android:textSize="16sp"

                    />

            </RelativeLayout>
        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:id="@+id/hallCapacity_cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:cardBackgroundColor="@color/colorSecondary"
            android:foreground="?android:attr/selectableItemBackground"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="20dp"
            app:cardCornerRadius="@dimen/cardView_radius"
            app:cardElevation="@dimen/cardview_elevation"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/buildingNumber_cardview">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/hallCapacityHeader"
                    android:drawableLeft="@drawable/capacity_layerlist"

                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/hall_capacity"

                    android:textColor="@color/colorAccent"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    />

                <TextView
                    android:id="@+id/hallCapacity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/hallCapacityHeader"
                    android:layout_marginStart="40dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="20dp"
                    android:gravity="center"
                    android:text="@string/hall_capacity"

                    android:textColor="@color/colorAccent"
                    android:textSize="16sp" />

            </RelativeLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:id="@+id/hall_notes_cardview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:cardBackgroundColor="@color/colorSecondary"
            android:foreground="?android:attr/selectableItemBackground"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="20dp"
            app:cardCornerRadius="@dimen/cardView_radius"
            app:cardElevation="@dimen/cardview_elevation"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/hallCapacity_cardView">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/notes_cardview_background"

                >

                <TextView
                    android:id="@+id/notes_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/notes_header"
                    android:textColor="@color/colorSecondary"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    />

                <TextView
                    android:id="@+id/hall_notes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/notes_header"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="40dp"
                    android:layout_marginStart="40dp"
                    android:text="@string/notes_example"
                    android:textColor="@color/colorSecondary"
                    android:textSize="20sp"
                    />



            </RelativeLayout>
        </android.support.v7.widget.CardView>



    </android.support.constraint.ConstraintLayout>


</android.support.v4.widget.NestedScrollView>